testsuite/tests/partial-sigs/should_fail/WildcardInADT2.hs
{-# LANGUAGE PartialTypeSignatures #-}
module WildcardInADT2 where

data Foo a = Foo { get :: Either _ a }
