testsuite/tests/partial-sigs/should_fail/WildcardInADT2.stderr

WildcardInADT2.hs:4:34: error: [GHC-65507]
    • Wildcard ‘_’ not allowed
    • In the definition of data constructor ‘Foo’
